Finished Product part1
Finished assignment at basic stage

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
          I have two cats, Luna and Artie, named after the cats in Sailor Moon.
       </p>
       <div id="personalImages">
-         <img class="imageBorders" src="luna.PNG" alt="Image of Luna the cat" width="460px" height="400px">
-         <img class="imageBorders" src="michelle_Blake.PNG" alt="Image of Michelle" width="460px" height="400px">
-         <img class="imageBorders" src="artie.jpg" alt="Image of Artie the cat" width="460px" height="400px">
+         <img class="imageBorders" src="luna.PNG" alt="Image of Luna the cat" width="450px" height="450px">
+         <img class="imageBorders" src="michelle_Blake.PNG" alt="Image of Michelle" width="450px" height="450px">
+         <img class="imageBorders" src="artie.jpg" alt="Image of Artie the cat" width="450px" height="450px">
       </div>
       <h3 class="subHeadings">Interest in IT</h3>
       <p>I have always had a fascination with technology and the seemingly unlimited possibilities it can provide.
@@ -42,7 +42,7 @@
       </P>
       <h4 class="subHeadings">My Ideal Job</h4>
       <div id="idealJob">
-         <img id="jobImage" src="ideal_Job.jpg" alt="Screenshot of Easy Weddings job advertisement">
+         <img class="imageBorders" id="jobImage" src="ideal_Job.jpg" alt="Screenshot of Easy Weddings job advertisement">
          <strong>Job description</strong>
          <p> This job application is searching for someone with the capabilities of a web developer who is able to work in a team with UI/UX designers to assist with the
             more technical aspects of designing websites and web applications. This position is particularly appealing to me for a number of reasons.
@@ -68,12 +68,12 @@
          </p>
          <br>
          <a href="https://www.seek.com.au/job/50498888?type=standout">Frontend Developer job advertisement</a>
-       </div>
+      </div>
       <h5 class="subHeadings">Personal Profile</h5>
       <div id="quizResults">
-         <img src="16_Personalities_Quiz.jpg" alt="16 personalities quiz results" width="460px" height="400px">
-         <img src="big_5_Personality_Quiz.jpg" alt="Big 5 personality quiz results" width="460px" height="400px">
-         <img src="learning_Styles.jpg" alt="Learning styles quiz results" width="460px" height="400px">
+         <img class="imageBorders" src="16_Personalities_Quiz.jpg" alt="16 personalities quiz results" width="450px" height="450px">
+         <img class="imageBorders" src="big_5_Personality_Quiz.jpg" alt="Big 5 personality quiz results" width="450px" height="450px">
+         <img class="imageBorders" src="learning_Styles.jpg" alt="Learning styles quiz results" width="450px" height="450px">
       </div>
       <p>I have done a number of these tests throughout my life, particularly when I was younger and trying to decide on a career direction.
          For this reason, I do not put too much weight behind the results provided as these personality tests pointed me in the direction of a career I ended up being unsatisfied with.
@@ -142,13 +142,13 @@
          functionality of the app.
       </p>
       <div class="headlines">
-        <strong>Skills Required</strong>
+      <strong>Skills Required</strong>
       <div>
       <p>As previously mentioned, MIT App Inventor will be used to build the app. For this reason, the team designing the app will need to have familiarity with how the program is used.
          MIT App Inventor has numerous tutorials available on their website to teach the developer how to use the program (MIT App Inventor 2020). As a result of this, finding the necessary
          skills for this should be straightforward.
       </p>
-      <p> The design team will need to have access to and know how to operate an android device and a computer to be able to build and test the functionality and usability of their app.
+      <p>The design team will need to have access to and know how to operate an android device and a computer to be able to build and test the functionality and usability of their app.
          Android devices and computers are very widely used, it is not expected to be an issue to gain access to this hardware and find skilled users of the systems. If issues were to arise,
          there are a number of android emulators and user guides available online that would be utilised.
       </p>
@@ -159,5 +159,34 @@
          educational resource readily available to them to help them keep their cats safe. While cat poisonings will undoubtedly still occur, the risk would be significantly reduced and
          the possibility of death occurring would be considerably minimised due to the inclusion of veterinary and hotline contact details.
       </p>
+      <div class="headlines">
+         <strong>References</strong>
+      </div>
+      <p>
+         123test 2020, <i>Big Five personality test result</i>, 123test, viewed 2 September 2020, <a href="https://www.123test.com/report/AH4M44ABOQXSLVYKJQ/">< https://www.123test.com/report/AH4M44ABOQXSLVYKJQ/>.</a>
+      </p>
+      <p>
+         DeClementi, C 2014, <i>Educating New Pet Parents About Poison Prevention</i>, Clinician’s Brief, viewed 8 September 2020, <a href="https://www.cliniciansbrief.com/article/educating-new-pet-parents-about-poison-prevention">
+         <br>< https://www.cliniciansbrief.com/article/educating-new-pet-parents-about-poison-prevention>.</a>
+      </p>
+      <p>
+         Google Fonts n.d, <i>Fredericka the Great</i>, Google Fonts, viewed 11 September 2020, <a href="https://fonts.google.com/specimen/Fredericka+the+Great?sidebar.open=true&selection.family=Fredericka+the+Great">
+        <br>< https://fonts.google.com/specimen/Fredericka+the+Great?sidebar.open=true&selection.family=Fredericka+the+Great>.</a>
+      </p>
+      <p>
+         International Cat Care 2020, <i>Cats and poisons</i>, International Cat Care, viewed 7 September 2020, <a href="https://icatcare.org/advice/cats-and-poisons/">< https://icatcare.org/advice/cats-and-poisons/>.</a>
+      </p>
+      <p>
+         LifeTrain n.d, <i>Learning styles quiz</i>, LifeTrain, viewed 2 September 2020, <a href="http://www.emtrain.eu/learning-styles/">< http://www.emtrain.eu/learning-styles/>.</a>
+      </p>
+      <p>
+         MIT App Inventor 2020,<i> Beginner Tutorials</i>, MIT App Inventor, viewed 8 September 2020, <a href="https://appinventor.mit.edu/explore/ai2/beginner-videos">< https://appinventor.mit.edu/explore/ai2/beginner-videos>.</a>
+      <p>
+         NERIS Analytics Limited 2020, <i>Defender Personality</i>, NERIS Analytics Limited, viewed 2 September 2020, <a href="https://www.16personalities.com/isfj-personality">< https://www.16personalities.com/isfj-personality>.</a>
+      </p>
+      <p>
+         Seek 2020, <i>Frontend Developer</i>, Seek, viewed 4 September 2020, <a href="https://www.seek.com.au/job/50498888?type=standout">< https://www.seek.com.au/job/50498888?type=standout>.</a>
+      </p>
+      </pre>
    </body>
 </html>
