Fixes to HTML errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-   <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
    <head>
+      <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="styles.css">
       <title>My Profile</title>
    </head>
@@ -146,7 +146,7 @@
       </p>
       <div class="headlines">
       <h3>Skills Required</h3>
-      <div>
+      </div>
       <p>As previously mentioned, MIT App Inventor will be used to build the app. For this reason, the team designing the app will need to have familiarity with how the program is used.
          MIT App Inventor has numerous tutorials available on their website to teach the developer how to use the program (MIT App Inventor 2020). As a result of this, finding the necessary
          skills for this should be straightforward.
@@ -190,6 +190,5 @@
       <p>
          Seek 2020, <i>Frontend Developer</i>, Seek, viewed 4 September 2020, <a href="https://www.seek.com.au/job/50498888?type=standout">&lt;https://www.seek.com.au/job/50498888?type=standout&gt;.</a>
       </p>
-      </pre>
    </body>
 </html>
