Prior to div changes
Prior to attempting to fix div alignment in Ideal Job section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="heading">
          <h1>Michelle Woolley</h1>
       </div>
-      <div class="aboutMe">
+      <div id="aboutMe">
          <h2 class="subHeadings">About Me</h2>
          <h3 class="headlines">Student Number: s3858026</h3>
          <h3 class="headlines">Email: s3858026@student.rmit.edu.au</h3>
@@ -24,7 +24,7 @@
             <img class="imageDesign" src="artie.jpg" alt="Image of Artie the cat">
          </div>
       </div>
-      <div class="interestInIT">
+      <div id="interestInIT">
          <h2 class="subHeadings">Interest in IT</h2>
          <p>I have always had a fascination with technology and the seemingly unlimited possibilities it can provide.
             I grew up around computers and was taught to not just use technology for entertainment, but as a source of education and development.
@@ -45,11 +45,11 @@
             and teamwork; as each of these will not only be beneficial but necessary to work in the IT field.
          </P>
       </div>
-      <div class="myIdealJob">
+      <div id="myIdealJob">
          <h2 class="subHeadings">My Ideal Job</h2>
-         <a href="https://www.seek.com.au/job/50498888?type=standout">Frontend Developer job advertisement</a>
+         <a class="headlines" id="jobLink" href="https://www.seek.com.au/job/50498888?type=standout">Frontend Developer job advertisement</a>
          <div>
-         <img class="imageBorders" id="jobImage" src="ideal_Job.jpg" alt="Screenshot of Easy Weddings job advertisement" align="left">
+         <img class="imageBorders" id="jobImage" src="ideal_Job.jpg" alt="Screenshot of Easy Weddings job advertisement">
        </div>
          <div>
          <h3 class="headlines">Job description</h3>
@@ -77,7 +77,7 @@
          </p>
        </div>
       </div>
-      <div class="personalProfile">
+      <div id="personalProfile">
          <h2 class="subHeadings">Personal Profile</h2>
          <div class="centerImages">
             <img class="imageDesign" src="16_Personalities_Quiz.jpg" alt="16 personalities quiz results">
@@ -104,7 +104,7 @@
             conflicting learning styles.
          </p>
       </div>
-      <div class="report">
+      <div id="report">
          <h2 class="subHeadings">Project Idea</h2>
          <h3 class="headlines">Overview</h3>
          <p>This project involves building a mobile app that provides education and advice to cat owners in regards to items which are toxic to cats. Users of the app will be able to search for
@@ -159,7 +159,7 @@
             the possibility of death occurring would be considerably minimised due to the inclusion of veterinary and hotline contact details.
          </p>
       </div>
-      <div class="references">
+      <div id="references">
          <h2 class="subHeadings">
          References</h3>
          <p>
