--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title>My Profile</title>
    </head>
    <body>
+     <a name="top"></a>
       <div class="heading">
          <h1>Michelle Woolley</h1>
       </div>
@@ -48,10 +49,10 @@
       <div id="myIdealJob">
          <h2 class="subHeadings">My Ideal Job</h2>
          <a class="headlines" id="jobLink" href="https://www.seek.com.au/job/50498888?type=standout">Frontend Developer job advertisement</a>
-         <div>
+         <div id="jobImageDispaly">
          <img class="imageBorders" id="jobImage" src="ideal_Job.jpg" alt="Screenshot of Easy Weddings job advertisement">
        </div>
-         <div>
+         <div id="jobTextDisplay">
          <h3 class="headlines">Job description</h3>
          <p> This job application is searching for someone with the capabilities of a web developer who is able to work in a team with UI/UX designers to assist with the
             more technical aspects of designing websites and web applications. This position is particularly appealing to me for a number of reasons.
@@ -187,6 +188,7 @@
          <p>
             Seek 2020, <i>Frontend Developer</i>, Seek, viewed 4 September 2020, <a href="https://www.seek.com.au/job/50498888?type=standout">&lt;https://www.seek.com.au/job/50498888?type=standout&gt;.</a>
          </p>
+         <a class="headlines" id="topLink" href="#top">Back to top</a>
       </div>
    </body>
 </html>
