--- a/index.html
+++ b/index.html
@@ -49,33 +49,35 @@
       <div id="myIdealJob">
          <h2 class="subHeadings">My Ideal Job</h2>
          <a class="headlines" id="jobLink" href="https://www.seek.com.au/job/50498888?type=standout">Frontend Developer job advertisement</a>
-         <div id="jobImageDispaly">
-         <img class="imageBorders" id="jobImage" src="ideal_Job.jpg" alt="Screenshot of Easy Weddings job advertisement">
-       </div>
+         <div id="jobContainer">
+         <div id="jobImageDisplay">
+           <img class="imageBorders" id="jobImage" src="ideal_Job.jpg" alt="Screenshot of Easy Weddings job advertisement">
+         </div>
          <div id="jobTextDisplay">
-         <h3 class="headlines">Job description</h3>
-         <p> This job application is searching for someone with the capabilities of a web developer who is able to work in a team with UI/UX designers to assist with the
-            more technical aspects of designing websites and web applications. This position is particularly appealing to me for a number of reasons.
-            Web development is currently what I believe my ideal job would be. I enjoy design but I also enjoy the technical aspects that come hand in hand with working
-            as a web developer and this seems to be what the company is looking for. The company, Easy Weddings, also appealed to my personal interests and I believe working
-            for a company that interests you could contribute to making the job an enjoyable experience.
-         </p>
-         <h3 class="headlines">Skills, qualifications, and experience needed</h3>
-         <p>Easy weddings are looking to employ someone who has substantial experience in the Front-End web development industry with skills in Javascript,
-            React, HTML5, CSS3, and Git. They want someone who is proactive, has good attention to detail and communications skills, and who is able to work as part of
-            a team; potentially taking on more of a leadership role within it. Skills that will make you more desirable include experience in .NET environments and
-            exposure to Redux and JS unit testing.
-         </p>
-         <h3 class="headlines">Current skills, qualifications, and experience</h3>
-         <p>I have basic skills in Java, having completed Introduction to Programming last semester. As previously mentioned, I have completed self-directed learning in HTML,
-            CSS, and Javascript through the free online courses offered on freeCodeCamp and The Odin Project.
-         </p>
-         <h3 class="headlines">Plan to achieve the required skills, qualifications, and experience</h3>
-         <p>To begin with, I would complete a Bachelor of IT, minoring in Internet Design, while continuing to do my own self-learning to further build skills in Javascript,
-            HTML, CSS, and Git. Ideally, I would aim to gain employment as a graduate in a junior role to build my web development skills within a workplace environment
-            which would also help to develop teamwork and communication skills. I would continue to work in web development roles to build my experience until I had the necessary
-            skills and experience behind me to work in this role at Easy Weddings.
-         </p>
+           <h3 class="headlines">Job description</h3>
+           <p> This job application is searching for someone with the capabilities of a web developer who is able to work in a team with UI/UX designers to assist with the
+              more technical aspects of designing websites and web applications. This position is particularly appealing to me for a number of reasons.
+              Web development is currently what I believe my ideal job would be. I enjoy design but I also enjoy the technical aspects that come hand in hand with working
+              as a web developer and this seems to be what the company is looking for. The company, Easy Weddings, also appealed to my personal interests and I believe working
+              for a company that interests you could contribute to making the job an enjoyable experience.
+           </p>
+           <h3 class="headlines">Skills, qualifications, and experience needed</h3>
+           <p>Easy weddings are looking to employ someone who has substantial experience in the Front-End web development industry with skills in Javascript,
+              React, HTML5, CSS3, and Git. They want someone who is proactive, has good attention to detail and communications skills, and who is able to work as part of
+              a team; potentially taking on more of a leadership role within it. Skills that will make you more desirable include experience in .NET environments and
+              exposure to Redux and JS unit testing.
+           </p>
+           <h3 class="headlines">Current skills, qualifications, and experience</h3>
+           <p>I have basic skills in Java, having completed Introduction to Programming last semester. As previously mentioned, I have completed self-directed learning in HTML,
+              CSS, and Javascript through the free online courses offered on freeCodeCamp and The Odin Project.
+           </p>
+           <h3 class="headlines">Plan to achieve the required skills, qualifications, and experience</h3>
+           <p>To begin with, I would complete a Bachelor of IT, minoring in Internet Design, while continuing to do my own self-learning to further build skills in Javascript,
+              HTML, CSS, and Git. Ideally, I would aim to gain employment as a graduate in a junior role to build my web development skills within a workplace environment
+              which would also help to develop teamwork and communication skills. I would continue to work in web development roles to build my experience until I had the necessary
+              skills and experience behind me to work in this role at Easy Weddings.
+           </p>
+         </div>
        </div>
       </div>
       <div id="personalProfile">
