--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <title>My Profile</title>
    </head>
    <body>
-     <a name="top"></a>
+     <a id="top"></a>
       <div class="heading">
          <h1>Michelle Woolley</h1>
       </div>
@@ -163,8 +163,7 @@
          </p>
       </div>
       <div id="references">
-         <h2 class="subHeadings">
-         References</h3>
+         <h2 class="subHeadings">References</h2>
          <p>
             123test 2020, <i>Big Five personality test result</i>, 123test, viewed 2 September 2020, <a href="https://www.123test.com/report/AH4M44ABOQXSLVYKJQ/">&lt;https://www.123test.com/report/AH4M44ABOQXSLVYKJQ/&gt;.</a>
          </p>
