Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
            <h3 class="headlines">Skills, qualifications, and experience needed</h3>
            <p>Easy weddings are looking to employ someone who has substantial experience in the Front-End web development industry with skills in Javascript,
               React, HTML5, CSS3, and Git. They want someone who is proactive, has good attention to detail and communications skills, and who is able to work as part of
-              a team; potentially taking on more of a leadership role within it. Skills that will make you more desirable include experience in .NET environments and
+              a team; potentially taking on more of a leadership role within it. Skills that will make an applicant more desirable include experience in .NET environments and
               exposure to Redux and JS unit testing.
            </p>
            <h3 class="headlines">Current skills, qualifications, and experience</h3>
@@ -90,14 +90,14 @@
          <p>I have done a number of these tests throughout my life, particularly when I was younger and trying to decide on a career direction.
             For this reason, I do not put too much weight behind the results provided as these personality tests pointed me in the direction of a career I ended up being unsatisfied with.
             Having said this, a lot of the results accurately reflect my personality. My strengths include: kindness, enthusiasm, loyalty, hard-working, and supportiveness.
-            My weaknesses include: shyness, over-sensitivity, taking on too much than I can do alone, getting taken advantage of, and keeping my feelings to myself.
+            My weaknesses include: shyness, over-sensitivity, taking on more than I can do alone, getting taken advantage of, and keeping my feelings to myself.
             My weaknesses are something I have worked on and tried to overcome as I have gotten older, particularly when I entered the nursing industry.
             These weaknesses are certainly still present as aspects of my personality, however, it is to a lesser extent than what it was when I was younger.
          </p>
-         <p>Having worked in teams many times before, I know that I can be held back at times by my shyness and feeling like my ideas and inputs are not good enough which can lead me
-            to not contribute as much in these areas. As mentioned previously, I have worked to try and overcome these weaknesses and my experience as a nurse has made me much more confident
+         <p>Having worked in teams many times before, I know I can be held back at times by my shyness and feeling like my ideas and inputs are not good enough which can lead me
+            to not contributing as much in these areas. As mentioned previously, I have worked to try and overcome these weaknesses and my experience as a nurse has made me much more confident
             when working as part of a team and contributing my ideas. While it may take time for me to gain initial confidence within the group, once I am comfortable I feel I will be a good
-            addition to the team. I will be able to contribute my strengths of a hard-working attitude and a supportive attitude; wanting to help other team members when they need it.
+            addition to the team. I will be able to contribute my strengths of a hard-working, supportive attitude, and wanting to help other team members when they need it.
          </P>
          <p>I feel having an even mix of people with different strengths is beneficial when working as part of a team. Being aware of each other’s strengths and weaknesses and being able
             to support and help my team members in areas where they may struggle is one of my useful strengths I believe I can contribute to the team. I think my biggest weakness is my shyness,
@@ -111,7 +111,7 @@
          <h2 class="subHeadings">Project Idea</h2>
          <h3 class="headlines">Overview</h3>
          <p>This project involves building a mobile app that provides education and advice to cat owners in regards to items which are toxic to cats. Users of the app will be able to search for
-            various foods, plants, cleaning products, and medications and will be provided with evidence-based information on whether they are dangerous to cats and what they should do if their
+            various foods, plants, house-hold products, and medications and will be provided with evidence-based information on whether they are dangerous to cats and what they should do if their
             cat has come into contact with a toxin. In the event a user believes their pet has been poisoned, the app will provide them with the capacity to find pet poison hotline numbers and
             veterinary clinics near them.
          </p>
@@ -125,9 +125,9 @@
             Due to the aforementioned reasons, a mobile app would be an essential tool for cat owners to enable them to quickly find toxin information in the event of a time-critical poisoning.
          </p>
          <h3 class="headlines">Description</h3>
-         <p>The main feature of this app will be the ability to search for and gain information items that may be toxic to cats. When opened, the app will display three selections the user will be
+         <p>The main feature of this app will be the ability to search for and gain information on items that may be toxic to cats. When opened, the app will display three selections the user will be
             able to choose from: search toxins, find a veterinary clinic nearby, and poison hotline numbers. When the user selects the search toxins option a list of the categories the user can search
-            through will be displayed: food, medications, plants, cleaning products, and a view all option. The user will have the ability to either browse through the list or use a search bar to
+            through will be displayed: food, medications, plants, house-hold products, and a view all option. The user will have the ability to either browse through the list or use a search bar to
             search for a specific item they want information about. When a specific item is selected, the user will be displayed the following information: a picture of the item; a description of
             the item; why it is toxic to cats; symptoms the cat will display if the toxin has been ingested; and treatment information.
          </p>
@@ -153,7 +153,7 @@
             skills for this should be straightforward.
          </p>
          <p>The design team will need to have access to and know how to operate an android device and a computer to be able to build and test the functionality and usability of their app.
-            Android devices and computers are very widely used, it is not expected to be an issue to gain access to this hardware and find skilled users of the systems. If issues were to arise,
+            Android devices and computers are very widely used, therefore, it is not expected to be an issue to gain access to this hardware and find skilled users of the systems. If issues were to arise,
             there are a number of android emulators and user guides available online that would be utilised.
          </p>
          <h3 class="headlines">Outcome</h3>
