--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
          </P>
       </div>
       <div id="myIdealJob">
-         <h2 class="subHeadings">My Ideal Job</h2>
+         <h2 class="subHeadings" id="idealJobHeading">My Ideal Job</h2>
          <a class="headlines" id="jobLink" href="https://www.seek.com.au/job/50498888?type=standout">Frontend Developer job advertisement</a>
          <div id="jobContainer">
          <div id="jobImageDisplay">
@@ -163,7 +163,7 @@
          </p>
       </div>
       <div id="references">
-         <h2 class="subHeadings">References</h2>
+         <h2 class="subHeadings" id="referencesHeading">References</h2>
          <p>
             123test 2020, <i>Big Five personality test result</i>, 123test, viewed 2 September 2020, <a href="https://www.123test.com/report/AH4M44ABOQXSLVYKJQ/">&lt;https://www.123test.com/report/AH4M44ABOQXSLVYKJQ/&gt;.</a>
          </p>
