--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="styles.css">
       <title>My Profile</title>
    </head>
@@ -172,8 +172,8 @@
             <br>&lt;https://www.cliniciansbrief.com/article/educating-new-pet-parents-about-poison-prevention&gt;.</a>
          </p>
          <p>
-            Google Fonts n.d, <i>Fredericka the Great</i>, Google Fonts, viewed 11 September 2020, <a href="https://fonts.google.com/specimen/Fredericka+the+Great?sidebar.open=true&selection.family=Fredericka+the+Great">
-            <br>&lt;https://fonts.google.com/specimen/Fredericka+the+Great?sidebar.open=true&selection.family=Fredericka+the+Great&gt;.</a>
+            Google Fonts n.d, <i>Poiret One</i>, Google Fonts, viewed 11 September 2020, <a href="https://fonts.google.com/specimen/Poiret+One?sidebar.open=true&selection.family=Poiret+One">
+            <br>&lt;https://fonts.google.com/specimen/Poiret+One?sidebar.open=true&selection.family=Poiret+One&gt;.</a>
          </p>
          <p>
             International Cat Care 2020, <i>Cats and poisons</i>, International Cat Care, viewed 7 September 2020, <a href="https://icatcare.org/advice/cats-and-poisons/">&lt;https://icatcare.org/advice/cats-and-poisons/&gt;.</a>
